<resources>
    <string name="app_name">Android-THM_AirSoft</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="lbl_setup_fragment_name">THM AIRSOFT RUSH</string>
    <string name="lbl_game_fragment_name">THM AIRSOFT RUSH</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hintGameTime">Enter Time</string>
    <string name="hintBombTime">Enter Time</string>
    <string name="hintDisarmPinCode">Enter Code</string>
    <string name="hintArmPinCode">Enter Code</string>
    <string name="txt_button_start_game">START</string>
    <string name="lbl_game_time">Game Time:</string>
    <string name="lbl_bomb_time">Bobs Time:</string>
    <string name="lbl_arm_pin_code">Arm Code:</string>
    <string name="lbl_disarm_pin_code">Disarm Code:</string>
    <string name="lbl_FragSetup_Sub_Name">Setup your game and press START</string>
    <string name="lbl_FragGame_Sub_Name">Game is active</string>
    <string name="lbl_Winner_Victory">Winner</string>
    <string name="lbl_enter_pin_code">Pin Code</string>
    <string name="hintEnterPinCode">Enter Pin Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vc">VC</string>
    <string name="txt_button_end_game">EXIT</string>
    <string name="btnArmDefuse">ARM</string>
    <string name="txt_button_save_settings">Save</string>
    <string name="lbl_victory_fragment_name">VICTORY FRAGMENT</string>
    <string name="txt_debug_text">Debug</string>
</resources>